# moneysweep-pr

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  HANDOFF.md  IMPLEMENTATION_STATUS.md  LICENSE  MODULE_REDUCTION_PLAN.md  Makefile  README.md  RECOMMENDATIONS.md  SECURITY.md  SETUP.md  STATUS.md  THIS_IS_TEST_ROUTING_CHECK_DO_NOT_KEEP.txt  current_status.json  federation.json  module_inventory.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  run_all.py  run_pr_intake_router.py  run_pr_news_raw_intake.py  run_pr_news_router_pipeline.py
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md  size-guard-allowlist.txt
archive/: README.md
config/: alert_thresholds.yaml  pr_intake_domain_router.yaml  project_watchlist.yaml
configs/: schema_registry.yaml  source_registry.yaml
contract_sweeper/: __init__.py
contract_sweeper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: README.md  index.html  package-lock.json  package.json
docs/: ACT_DATA_INVENTORY.md  ARCHITECTURE.md  BLOCKED_PHASES_AND_UNFREEZE_RULES.md  BUILD_EXECUTION_SEQUENCE.md  CI_TESTING_STRATEGY.md  CI_WORKFLOW_README.md  CLAIM_LANGUAGE_POLICY.md  CODE_GAP_AND_WORKFLOW_AUDIT.md  DATA_POLICY.md  DEPENDENCY_SECURITY_AUDIT.md  DEVELOPMENT.md  EXTERNAL_BLOCKER_FREEZE_STATUS_R4_9E.md  FEDERATION_INTERFACE.md  FOIA_REQUEST_TEMPLATES.md  GOVERNMENT_FLOW_COVERAGE.md  HISTORY_PURGE_PLAN.md  (+62 more)
(+1533 files in other folders)
